--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       {"id": "MAGICIAN", "name": "Magician", "number": 6, "type1": "PSYCHIC", "type2": "", "hp": 45, "attack": 35, "defense": 45, "specialAttack": 45, "specialDefense": 45, "speed": 45},
       {"id": "ARCH_MAGE_FIRE_POISON", "name": "Arch Mage (Fire, Poison)", "number": 7, "type1": "FIRE", "type2": "POISON", "hp": 46, "attack": 36, "defense": 46, "specialAttack": 46, "specialDefense": 46, "speed": 46},
       {"id": "ARCH_MAGE_ICE_LIGHTNING", "name": "Arch Mage (Ice, Lightning)", "number": 8, "type1": "ICE", "type2": "ELECTRIC", "hp": 47, "attack": 37, "defense": 47, "specialAttack": 47, "specialDefense": 47, "speed": 47},
-      {"id": "BISHOP", "name": "Bishop", "number": 9, "type1": "PSYCHIC", "type2": "", "hp": 48, "attack": 38, "defense": 48, "specialAttack": 48, "specialDefense": 48, "speed": 48},
+      {"id": "BISHOP", "name": "Bishop", "number": 9, "type1": "PSYCHIC", "type2": "FAIRY", "hp": 48, "attack": 38, "defense": 48, "specialAttack": 48, "specialDefense": 48, "speed": 48},
       {"id": "ARCHER", "name": "Archer", "number": 10, "type1": "NORMAL", "type2": "", "hp": 49, "attack": 39, "defense": 49, "specialAttack": 49, "specialDefense": 49, "speed": 49},
       {"id": "BOWMASTER", "name": "Bowmaster", "number": 11, "type1": "NORMAL", "type2": "FIRE", "hp": 50, "attack": 40, "defense": 50, "specialAttack": 50, "specialDefense": 50, "speed": 50},
       {"id": "MARKSMAN", "name": "Marksman", "number": 12, "type1": "NORMAL", "type2": "ICE", "hp": 51, "attack": 41, "defense": 51, "specialAttack": 51, "specialDefense": 51, "speed": 51},
@@ -235,7 +235,7 @@
       {"id": "SHADOWER", "name": "Shadower", "number": 15, "type1": "DARK", "type2": "POISON", "hp": 54, "attack": 44, "defense": 54, "specialAttack": 54, "specialDefense": 54, "speed": 54},
       {"id": "PIRATE", "name": "Pirate", "number": 16, "type1": "NORMAL", "type2": "", "hp": 55, "attack": 45, "defense": 55, "specialAttack": 55, "specialDefense": 55, "speed": 55},
       {"id": "CORSAIR", "name": "Corsair", "number": 17, "type1": "NORMAL", "type2": "STEEL", "hp": 56, "attack": 46, "defense": 56, "specialAttack": 56, "specialDefense": 56, "speed": 56},
-      {"id": "BUCCANEER", "name": "Buccaneer", "number": 18, "type1": "FIGHTING", "type2": "", "hp": 57, "attack": 47, "defense": 57, "specialAttack": 57, "specialDefense": 57, "speed": 57},
+      {"id": "BUCCANEER", "name": "Buccaneer", "number": 18, "type1": "FIGHTING", "type2": "WATER", "hp": 57, "attack": 47, "defense": 57, "specialAttack": 57, "specialDefense": 57, "speed": 57},
       {"id": "NOBLESSE", "name": "Noblesse", "number": 19, "type1": "NORMAL", "type2": "", "hp": 58, "attack": 48, "defense": 58, "specialAttack": 58, "specialDefense": 58, "speed": 58},
       {"id": "DAWN_WARRIOR", "name": "Dawn Warrior", "number": 20, "type1": "FIRE", "type2": "FIGHTING", "hp": 59, "attack": 49, "defense": 59, "specialAttack": 59, "specialDefense": 59, "speed": 59},
       {"id": "BLAZE_WIZARD", "name": "Blaze Wizard", "number": 21, "type1": "FIRE", "type2": "", "hp": 60, "attack": 50, "defense": 60, "specialAttack": 60, "specialDefense": 60, "speed": 60},
@@ -243,8 +243,8 @@
       {"id": "NIGHT_WALKER", "name": "Night Walker", "number": 23, "type1": "DARK", "type2": "", "hp": 62, "attack": 52, "defense": 62, "specialAttack": 62, "specialDefense": 62, "speed": 62},
       {"id": "THUNDER_BREAKER", "name": "Thunder Breaker", "number": 24, "type1": "WATER", "type2": "ELECTRIC", "hp": 63, "attack": 53, "defense": 63, "specialAttack": 63, "specialDefense": 63, "speed": 63},
       {"id": "ARAN", "name": "Aran", "number": 25, "type1": "ICE", "type2": "FIGHTING", "hp": 64, "attack": 54, "defense": 64, "specialAttack": 64, "specialDefense": 64, "speed": 64},
-      {"id": "EVAN", "name": "Evan", "number": 26, "type1": "DRAGON", "type2": "FLYING", "hp": 65, "attack": 55, "defense": 65, "specialAttack": 65, "specialDefense": 65, "speed": 65},
-      {"id": "DUAL_BLADE", "name": "Dual Blade", "number": 27, "type1": "NORMAL", "type2": "DARK", "hp": 66, "attack": 56, "defense": 66, "specialAttack": 66, "specialDefense": 66, "speed": 66},
+      {"id": "EVAN", "name": "Evan", "number": 26, "type1": "DRAGON", "type2": "PSYCHIC", "hp": 65, "attack": 55, "defense": 65, "specialAttack": 65, "specialDefense": 65, "speed": 65},
+      {"id": "DUAL_BLADE", "name": "Dual Blade", "number": 27, "type1": "STEEL", "type2": "DARK", "hp": 66, "attack": 56, "defense": 66, "specialAttack": 66, "specialDefense": 66, "speed": 66},
       {"id": "CITIZEN", "name": "Citizen", "number": 28, "type1": "NORMAL", "type2": "", "hp": 67, "attack": 57, "defense": 67, "specialAttack": 67, "specialDefense": 67, "speed": 67},
       {"id": "WILD_HUNTER", "name": "Wild Hunter", "number": 29, "type1": "NORMAL", "type2": "GROUND", "hp": 68, "attack": 58, "defense": 68, "specialAttack": 68, "specialDefense": 68, "speed": 68},
       {"id": "BATTLE_MAGE", "name": "Battle Mage", "number": 30, "type1": "FIGHTING", "type2": "DARK", "hp": 69, "attack": 59, "defense": 69, "specialAttack": 69, "specialDefense": 69, "speed": 69},
@@ -254,7 +254,7 @@
       {"id": "DEMON_SLAYER", "name": "Demon Slayer", "number": 34, "type1": "DARK", "type2": "FLYING", "hp": 73, "attack": 63, "defense": 73, "specialAttack": 73, "specialDefense": 73, "speed": 73},
       {"id": "JETT", "name": "Jett", "number": 35, "type1": "NORMAL", "type2": "", "hp": 74, "attack": 64, "defense": 74, "specialAttack": 74, "specialDefense": 74, "speed": 74},
       {"id": "ZEN", "name": "Zen", "number": 36, "type1": "FIGHTING", "type2": "", "hp": 75, "attack": 65, "defense": 75, "specialAttack": 75, "specialDefense": 75, "speed": 75},
-      {"id": "PHANTOM", "name": "Phantom", "number": 37, "type1": "NORMAL", "type2": "", "hp": 76, "attack": 66, "defense": 76, "specialAttack": 76, "specialDefense": 76, "speed": 76},
+      {"id": "PHANTOM", "name": "Phantom", "number": 37, "type1": "NORMAL", "type2": "DARK", "hp": 76, "attack": 66, "defense": 76, "specialAttack": 76, "specialDefense": 76, "speed": 76},
       {"id": "MIHILE", "name": "Mihile", "number": 38, "type1": "STEEL", "type2": "FIGHTING", "hp": 77, "attack": 67, "defense": 77, "specialAttack": 77, "specialDefense": 77, "speed": 77},
       {"id": "LUMINOUS", "name": "Luminous", "number": 39, "type1": "PSYCHIC", "type2": "DARK", "hp": 78, "attack": 68, "defense": 78, "specialAttack": 78, "specialDefense": 78, "speed": 78},
       {"id": "KAISER", "name": "Kaiser", "number": 40, "type1": "DRAGON", "type2": "FIRE", "hp": 79, "attack": 69, "defense": 79, "specialAttack": 79, "specialDefense": 79, "speed": 79},
@@ -267,7 +267,7 @@
       {"id": "ZERO", "name": "Zero", "number": 47, "type1": "PSYCHIC", "type2": "NORMAL", "hp": 86, "attack": 76, "defense": 86, "specialAttack": 86, "specialDefense": 86, "speed": 86},
       {"id": "BEAST_TAMER", "name": "Beast Tamer", "number": 48, "type1": "NORMAL", "type2": "", "hp": 87, "attack": 77, "defense": 87, "specialAttack": 87, "specialDefense": 87, "speed": 87},
       {"id": "BEAST_TAMER_BEAR", "name": "Beast Tamer (Bear)", "number": 48, "type1": "FIGHTING", "type2": "FIRE", "hp": 88, "attack": 78, "defense": 88, "specialAttack": 88, "specialDefense": 88, "speed": 88},
-      {"id": "BEAST_TAMER_SNOW_LEOPARD", "name": "Beast Tamer (Snow Leopard)", "number": 48, "type1": "ICE", "type2": "", "hp": 89, "attack": 79, "defense": 89, "specialAttack": 89, "specialDefense": 89, "speed": 89},
+      {"id": "BEAST_TAMER_SNOW_LEOPARD", "name": "Beast Tamer (Snow Leopard)", "number": 48, "type1": "ICE", "type2": "ELECTRIC", "hp": 89, "attack": 79, "defense": 89, "specialAttack": 89, "specialDefense": 89, "speed": 89},
       {"id": "BEAST_TAMER_HAWK", "name": "Beast Tamer (Hawk)", "number": 48, "type1": "FLYING", "type2": "", "hp": 90, "attack": 80, "defense": 90, "specialAttack": 90, "specialDefense": 90, "speed": 90},
       {"id": "BEAST_TAMER_CAT", "name": "Beast Tamer (Cat)", "number": 48, "type1": "FAIRY", "type2": "", "hp": 91, "attack": 81, "defense": 91, "specialAttack": 91, "specialDefense": 91, "speed": 91},
       {"id": "SHADE", "name": "Shade", "number": 49, "type1": "FIGHTING", "type2": "GHOST", "hp": 92, "attack": 82, "defense": 92, "specialAttack": 92, "specialDefense": 92, "speed": 92},
@@ -275,7 +275,7 @@
       {"id": "KINESIS", "name": "Kinesis", "number": 51, "type1": "PSYCHIC", "type2": "", "hp": 94, "attack": 84, "defense": 94, "specialAttack": 94, "specialDefense": 94, "speed": 94},
       {"id": "BLASTER", "name": "Blaster", "number": 52, "type1": "FIRE", "type2": "FIGHTING", "hp": 95, "attack": 85, "defense": 95, "specialAttack": 95, "specialDefense": 95, "speed": 95},
       {"id": "CADENA", "name": "Cadena", "number": 53, "type1": "DARK", "type2": "", "hp": 96, "attack": 86, "defense": 96, "specialAttack": 96, "specialDefense": 96, "speed": 96},
-      {"id": "ILLIUM", "name": "Illium", "number": 54, "type1": "PSYCHIC", "type2": "FLYING", "hp": 97, "attack": 87, "defense": 97, "specialAttack": 97, "specialDefense": 97, "speed": 97},
+      {"id": "ILLIUM", "name": "Illium", "number": 54, "type1": "PSYCHIC", "type2": "STEEL", "hp": 97, "attack": 87, "defense": 97, "specialAttack": 97, "specialDefense": 97, "speed": 97},
       {"id": "ARK", "name": "Ark", "number": 55, "type1": "DARK", "type2": "FIGHTING", "hp": 98, "attack": 88, "defense": 98, "specialAttack": 98, "specialDefense": 98, "speed": 98},
       {"id": "PATHFINDER", "name": "Pathfinder", "number": 56, "type1": "DARK", "type2": "", "hp": 99, "attack": 89, "defense": 99, "specialAttack": 99, "specialDefense": 99, "speed": 99},
       {"id": "HOYOUNG", "name": "Hoyoung", "number": 57, "type1": "GHOST", "type2": "PSYCHIC", "hp": 100, "attack": 90, "defense": 100, "specialAttack": 100, "specialDefense": 100, "speed": 100},
@@ -293,8 +293,8 @@
       {"id": "PAPULATUS", "name": "Papulatus", "number": 7, "type1": "GHOST", "type2": "STEEL", "hp": 108, "attack": 98, "defense": 108, "specialAttack": 108, "specialDefense": 108, "speed": 108},
       {"id": "PIERRE", "name": "Pierre", "number": 8, "type1": "NORMAL", "type2": "", "hp": 109, "attack": 99, "defense": 109, "specialAttack": 109, "specialDefense": 109, "speed": 109},
       {"id": "VON_BON", "name": "Von Bon", "number": 9, "type1": "PSYCHIC", "type2": "", "hp": 110, "attack": 100, "defense": 110, "specialAttack": 110, "specialDefense": 110, "speed": 110},
-      {"id": "CRIMSON_QUEEN", "name": "Crimson Queen", "number": 10, "type1": "POISON", "type2": "DARK", "hp": 111, "attack": 101, "defense": 111, "specialAttack": 111, "specialDefense": 111, "speed": 111},
-      {"id": "VELLUM", "name": "Vellum", "number": 11, "type1": "GROUND", "type2": "FIRE", "hp": 112, "attack": 102, "defense": 112, "specialAttack": 112, "specialDefense": 112, "speed": 112},
+      {"id": "CRIMSON_QUEEN", "name": "Crimson Queen", "number": 10, "type1": "FIRE", "type2": "DARK", "hp": 111, "attack": 101, "defense": 111, "specialAttack": 111, "specialDefense": 111, "speed": 111},
+      {"id": "VELLUM", "name": "Vellum", "number": 11, "type1": "DRAGON", "type2": "GROUND", "hp": 112, "attack": 102, "defense": 112, "specialAttack": 112, "specialDefense": 112, "speed": 112},
       {"id": "VON_LEON", "name": "Von Leon", "number": 12, "type1": "FIGHTING", "type2": "", "hp": 113, "attack": 103, "defense": 113, "specialAttack": 113, "specialDefense": 113, "speed": 113},
       {"id": "HORNTAIL", "name": "Horntail", "number": 13, "type1": "DRAGON", "type2": "ROCK", "hp": 114, "attack": 104, "defense": 114, "specialAttack": 114, "specialDefense": 114, "speed": 114},
       {"id": "ARKARIUM", "name": "Arkarium", "number": 14, "type1": "POISON", "type2": "DARK", "hp": 115, "attack": 105, "defense": 115, "specialAttack": 115, "specialDefense": 115, "speed": 115},
@@ -314,8 +314,8 @@
       {"id": "JULIETA", "name": "Julieta", "number": 28, "type1": "POISON", "type2": "", "hp": 129, "attack": 119, "defense": 129, "specialAttack": 129, "specialDefense": 129, "speed": 129}
     ];
 
-    document.getElementById("classMapledexTableBodyId").innerHTML = mapledexTableBody("classMapledexTableBodyId");
-    document.getElementById("bossMapledexTableBodyId").innerHTML = mapledexTableBody("bossMapledexTableBodyId");
+    document.getElementById('classMapledexTableBodyId').innerHTML = mapledexTableBody('classMapledexTableBodyId');
+    document.getElementById('bossMapledexTableBodyId').innerHTML = mapledexTableBody('bossMapledexTableBodyId');
 
     function mapledexTableBody(id)
     {
@@ -326,14 +326,14 @@
       `;
 
       let pokemonData = null;
-      if (id === "classMapledexTableBodyId")
+      if (id === 'classMapledexTableBodyId')
       {
         pokemonData = CLASS_DATA;
         html += `
             <th style="background: #64D364;" width="35px"> Mdex</th>
         `;
       }
-      else if (id === "bossMapledexTableBodyId")
+      else if (id === 'bossMapledexTableBodyId')
       {
         pokemonData = BOSS_DATA;
         html += `
